add:product image create endpoint and some little updates
